--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://dhxoghks95.github.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "OH! DATA"
+theme = "hugo-clarity"
