--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/hugo-clarity"]
 	path = themes/hugo-clarity
 	url = https://github.com/chipzoller/hugo-clarity
+[submodule "themes/hugo-theme-prav"]
+	path = themes/hugo-theme-prav
+	url = https://github.com/dhxoghks95/hugo-theme-prav.git
