--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 # If you want to track using GA or use disqus for comments, uncomment the 
 # following and add the correct values
 #googleanalytics = ""
-disqusShortname = "taihwanoh"
+disqusShortname = "dhxoghks95"
 
 
 
